Update links la_note_enchantée on index.html and add of HTML skeleton of la_note_enchantée.html with scss.file

--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -7,4 +7,4 @@
   padding: 0;
   text-decoration: none;
 }
-/*# sourceMappingURL=à_la_française.css.map */
+/*# sourceMappingURL=la_note_enchantée.css.map */
