--- a/css/main.scss
+++ b/css/main.scss
@@ -8,3 +8,10 @@ $secondary_color : #FF79DA;
 $tertiary_color:#99E2D0;
 $FShrikhand: 'Shrikhand', cursive;
 $FRoboto : 'Roboto', sans-serif;
+
+
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
