--- a/css/main.scss
+++ b/css/main.scss
@@ -15,3 +15,8 @@ $FRoboto : 'Roboto', sans-serif;
     padding: 0;
     text-decoration: none;
 }
+
+/* MOBILE */
+@media screen and (min-width:320px) and (max-width:768px){
+
+}
