--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,22 @@
   padding: 0;
   text-decoration: none;
 }
+
+/* MOBILE */
+@media screen and (min-width: 0px) and (max-width: 768px) {
+  #logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    padding: 0.9em 0.5em;
+  }
+  .section-1, .section-2, .section-3, .section-4 img {
+    width: 25%;
+  }
+}
 /*# sourceMappingURL=main.css.map */
