--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,20 @@ $FRoboto : 'Roboto', sans-serif;
 }
 
 /* MOBILE */
-@media screen and (min-width:320px) and (max-width:768px){
+@media screen and (min-width:0px) and (max-width:768px){
 
+    
+    .header {
+    }
+    #logo{
+        display: flex;
+        justify-content: center;
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+        padding: 0.9em 0.5em;
+    }
+
+    .section-1,.section-2,.section-3,.section-4 img{
+        width: 25%;
+    }
+    
 }
