--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,12 @@
 /* Shrikhand Regular 400*/
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Shrikhand&display=swap');
-/* Roboto Light 300 italic */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');$secondary_color : #FF79DA;
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+/* Roboto Bold 700 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+$primary_color:#9356DC;
+$secondary_color : #FF79DA;
 $tertiary_color:#99E2D0;
 $FShrikhand: 'Shrikhand', cursive;
 $FRoboto : 'Roboto', sans-serif;
@@ -21,6 +26,7 @@ $FRoboto : 'Roboto', sans-serif;
 /* MOBILE */
 @media screen and (min-width:0px) and (max-width:768px)
 {
+    
     
 
     /* HEADER */
@@ -49,12 +55,14 @@ $FRoboto : 'Roboto', sans-serif;
         font-size:1.1em;
         padding: 0.9em 1em 0.7em 1em;
         
-            & .fa-map-marker-alt{
+            & .fa-map-marker-alt
+            {
                 position:relative;
                 right:25px;
             }
             
-            & p {
+            & p
+            {
                 position: relative;
                 right:10px;
                 
@@ -63,7 +71,52 @@ $FRoboto : 'Roboto', sans-serif;
 
 
     /* END OF SECTION -1 */
-    .section-2,.section-3,.section-4 img
+
+    /* SECTION -2 */
+    .section-2
+    {
+        display:grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-areas: 
+        "a a a"
+         "b b b";
+         justify-items: center;
+        font-family: $FRoboto;
+        padding:2rem;
+        background-color: lightgray;
+    }
+
+    .description
+    {
+        grid-area: a;
+        
+    }
+
+
+
+    .description h1
+    {
+        font-weight:bold 700;
+        margin-bottom: 15px;
+
+    }
+    .description span{
+        position: relative;
+        left:40px;
+    }
+    
+    .description p {
+        margin-bottom: 15px;
+        font-size: 1.1em;
+    }
+
+    .button{
+        grid-area:b;
+        
+    }
+    
+    /* SECTION -2 */
+    .section-3,.section-4 img
     {
         display:none;
     }
