--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ $FRoboto : 'Roboto', sans-serif;
 }
 
 /* MOBILE */
-@media screen and (min-width:0px) and (max-width:767px)
+@media screen and (min-width:320px) and (max-width:767px)
 {
     
     
@@ -78,11 +78,11 @@ $FRoboto : 'Roboto', sans-serif;
         grid-template-columns: repeat(2,1fr);
         grid-template-areas: 
         "a a a"
-         "b b b";
+        "b b b";
          justify-items: center;
         font-family: $FRoboto;
         padding:2rem;
-        background-color: #F0F0F0;
+        background-color: #F8F8F8;
     }
 
     .description
@@ -106,10 +106,11 @@ $FRoboto : 'Roboto', sans-serif;
         position: relative;
         left:45px;
         width: 80%;
+        font-size: 1.3em;
     }
     .description #convenance{
         position: relative;
-        left:32px;
+        left:35px;
     }
 
 
@@ -131,11 +132,25 @@ $FRoboto : 'Roboto', sans-serif;
         color:white;
     }
     
-    /* SECTION -2 */
-    .section-3,.section-4 img
+    /* END OF SECTION -2 */
+    .section-3, .section-4 img
     {
         display:none;
     }
 
+
+}
+/* ADJUSTING SIZE AND POSITION OF ELEMENTS OF SECTION -2 */
+@media screen and (min-width:320px) and (max-width:368px){
+
+    .description h1{
+        position: relative;
+        font-size: 1.1em;
+        left:35px;
+    } 
+
+    .description p {
+        font-size: 0.9em;
+    }
     
 }
