--- a/css/main.css
+++ b/css/main.css
@@ -98,10 +98,10 @@
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: b;
-    border: 1px solid black;
-    padding: 0.8em 1em;
+    padding: 1.1em;
     border-radius: 30px;
-    background-color: red;
+    background-image: -webkit-gradient(linear, left top, right bottom, from(#E370DA), color-stop(#D66CDA), to(#AD5EDB));
+    background-image: linear-gradient(to bottom right, #E370DA, #D66CDA, #AD5EDB);
   }
   .button a {
     color: white;
