--- a/css/main.scss
+++ b/css/main.scss
@@ -122,10 +122,9 @@ $FRoboto : 'Roboto', sans-serif;
 
     .button{
         grid-area:b;
-        border:1px solid black;
-        padding:0.8em 1em;
+        padding:1.1em;
         border-radius: 30px;
-        background-color:red;
+        background-image:linear-gradient(to bottom right,#E370DA,#D66CDA,#AD5EDB);
     }
 
     .button a {
