--- a/css/main.scss
+++ b/css/main.scss
@@ -122,9 +122,11 @@ $FRoboto : 'Roboto', sans-serif;
 
     .button{
         grid-area:b;
-        padding:1.1em;
+        padding:0.9em 1.5em;
         border-radius: 30px;
         background-image:linear-gradient(to bottom right,#E370DA,#D66CDA,#AD5EDB);
+        margin-top:10px;
+        box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
     }
 
     .button a {
