--- a/css/main.css
+++ b/css/main.css
@@ -105,13 +105,75 @@
     margin-top: 10px;
     -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+    position: relative;
+    right: 10px;
   }
   .button a {
     color: white;
   }
   /* END OF SECTION -2 */
-  .section-3, .section-4 img {
+  /* SECTION -3 */
+  .section-3 {
+    margin-top: 2em;
+    font-family: "Roboto", sans-serif;
+  }
+  .section-3 header h1 {
+    font-size: 1.5em;
+    margin-bottom: 1.3em;
+    position: relative;
+    left: 55px;
+    width: 50%;
+  }
+  .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    background-color: #F6F6F6;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    margin-bottom: 15px;
+    padding: 1.5em 1.9em;
+    width: 55%;
+    -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+    position: relative;
+    left: 65px;
+  }
+  .item h2 {
+    font-size: 1em;
+  }
+  .item span {
+    background-color: purple;
+    border-radius: 80%;
+    padding: 0.3em 0.5em;
+    position: absolute;
+    left: -10px;
+    color: white;
+    font-size: 0.8em;
+    top: 24px;
+    background-color: #9356DC;
+  }
+  .item .fas {
+    font-size: 1em;
+    position: relative;
+    top: 1px;
+    color: gray;
+  }
+  .item:last-child:active {
+    background-color: #F5EDFF;
+  }
+  .item:last-child:active .fa-store {
+    color: #9356DC;
+  }
+  /* END SECTION -3 */
+  .section-4 img {
     display: none;
+  }
+  .section-4 {
+    background: #F0F0F0;
   }
 }
 
@@ -124,6 +186,10 @@
   }
   .description p {
     font-size: 0.9em;
+  }
+  .button {
+    position: relative;
+    right: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
