--- a/css/main.css
+++ b/css/main.css
@@ -117,12 +117,24 @@
     margin-top: 2em;
     font-family: "Roboto", sans-serif;
   }
-  .section-3 header h1 {
-    font-size: 1.5em;
-    margin-bottom: 1.3em;
+  .functioning {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: relative;
-    left: 55px;
-    width: 50%;
+    right: 70px;
+  }
+  .functioning h1 {
+    font-size: 1.3em;
+    margin-bottom: 1.1em;
+    margin-right: 48px;
   }
   .item {
     display: -webkit-box;
@@ -136,7 +148,7 @@
     border-bottom-left-radius: 20px;
     margin-bottom: 15px;
     padding: 1.5em 1.9em;
-    width: 55%;
+    width: 240px;
     -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
             box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
     position: relative;
@@ -177,7 +189,7 @@
   }
 }
 
-/* ADJUSTING SIZE AND POSITION OF ELEMENTS OF SECTION -2 */
+/* ADJUSTING SIZE AND POSITION OF ELEMENTS OF SECTION -2 ON MOBILE VERSION */
 @media screen and (min-width: 320px) and (max-width: 368px) {
   .description h1 {
     position: relative;
@@ -190,6 +202,25 @@
   .button {
     position: relative;
     right: 0;
+  }
+}
+
+@media screen and (max-width: 398px) {
+  .item {
+    padding: 1.1em;
+    position: relative;
+    left: 70px;
+  }
+  .item span {
+    position: absolute;
+    top: 17px;
+  }
+  .item .fas {
+    position: relative;
+    left: 9px;
+  }
+  .functioning h1 {
+    margin-left: 48px;
   }
 }
 /*# sourceMappingURL=main.css.map */
