--- a/css/main.scss
+++ b/css/main.scss
@@ -148,17 +148,22 @@ $FRoboto : 'Roboto', sans-serif;
         margin-top:2em;
         font-family: $FRoboto;
 
-            & header h1
-            {
-                font-size: 1.5em;
-                margin-bottom: 1.3em;
-                position:relative;
-                left:55px;
-                width:50%;
-            }
-
     }
+        .functioning{
 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        right:70px;
+            & h1{
+                
+                font-size: 1.3em;
+                margin-bottom: 1.1em;
+                margin-right: 48px;
+                
+            }
+        }
    
     .item {
         display: flex;
@@ -170,7 +175,7 @@ $FRoboto : 'Roboto', sans-serif;
         border-bottom-left-radius: 20px;
         margin-bottom: 15px;
         padding: 1.5em 1.9em;
-        width:55%;
+        width:240px;
         box-shadow: 0px 2px 10px rgba(0,0,0,0.5);
         position: relative;
         left: 65px;
@@ -225,7 +230,7 @@ $FRoboto : 'Roboto', sans-serif;
     }
 
 }
-/* ADJUSTING SIZE AND POSITION OF ELEMENTS OF SECTION -2 */
+/* ADJUSTING SIZE AND POSITION OF ELEMENTS OF SECTION -2 ON MOBILE VERSION */
 @media screen and (min-width:320px) and (max-width:368px){
 
     .description h1{
@@ -241,5 +246,28 @@ $FRoboto : 'Roboto', sans-serif;
     .button{
         position: relative;
         right:0;
+    }
+}
+
+@media screen and (max-width:398px) {
+    .item {
+        padding: 1.1em;
+        position: relative;
+        left:70px;
+
+            & span {
+                position:absolute;
+                top:17px;
+            }
+
+            & .fas {
+                position:relative;
+                left:9px;
+            }
+    }
+
+
+    .functioning h1 {
+        margin-left:48px;
     }
 }
