--- a/css/main.css
+++ b/css/main.css
@@ -181,16 +181,45 @@
     color: #9356DC;
   }
   /* END SECTION -3 */
-  .section-4 img {
-    display: none;
-  }
+  /* SECTION -4 */
   .section-4 {
     background: #F0F0F0;
+  }
+  .food_cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 15px;
+  }
+  .item-2 {
+    position: relative;
+    width: 280px;
+    background-color: white;
+    display: inline-block;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+  }
+  .item-2 img {
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: 150px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
   }
 }
 
 /* ADJUSTING SIZE AND POSITION OF ELEMENTS OF SECTION -2 ON MOBILE VERSION */
-@media screen and (min-width: 320px) and (max-width: 368px) {
+@media screen and (min-width: 0px) and (max-width: 368px) {
   .description h1 {
     position: relative;
     font-size: 1.1em;
