Almost all elements of section -4 are designed only the animation of the heart button isn't done

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@
     -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     position: relative;
-    right: 10px;
+    right: 6px;
   }
   .button a {
     color: white;
@@ -197,22 +197,64 @@
         -ms-flex-align: center;
             align-items: center;
     gap: 15px;
+    padding-top: 3em;
+    font-family: "Roboto", sans-serif;
+    position: relative;
+    right: 14px;
+  }
+  .food_cards h1 {
+    font-size: 1.3em;
+    position: relative;
+    right: 99px;
+  }
+  .food_cards h2 {
+    font-size: 1.2em;
   }
   .item-2 {
     position: relative;
-    width: 280px;
+    /* Temporary size */
+    width: 315px;
     background-color: white;
     display: inline-block;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+    color: black;
+  }
+  .item-2 .new_food {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    color: green;
+    background-color: #99E2D0;
+    font-weight: bolder;
+    padding: 0.6em;
+    font-size: 0.8em;
+  }
+  .item-2 .description_food {
+    padding: 10px 0px 5px 10px;
+    line-height: 24px;
+  }
+  .item-2 .description_food p {
+    font-size: 1em;
+    padding-bottom: 5px;
+    line-height: 24px;
+  }
+  .item-2 .heart_animation {
+    font-size: 1.6em;
+    position: absolute;
+    right: 19px;
+    bottom: 27px;
+  }
+  .item-2:visited {
+    color: black;
   }
   .item-2 img {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
-    height: 150px;
+    height: 152px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
   }
@@ -250,6 +292,46 @@
   }
   .functioning h1 {
     margin-left: 48px;
+  }
+  .food_cards {
+    position: relative;
+    right: 0;
+  }
+  .food_cards h2 {
+    font-size: 0.9em;
+  }
+  .food_cards h1 {
+    position: relative;
+    right: 90px;
+  }
+  .item-2 {
+    position: relative;
+    /* Temporary size */
+    width: 300px;
+  }
+  .item-2 .new_food {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    color: green;
+    background-color: #99E2D0;
+    font-weight: bolder;
+    padding: 0.6em;
+    font-size: 0.8em;
+  }
+  .item-2 .description_food {
+    padding: 10px 0px 5px 10px;
+    line-height: 20px;
+  }
+  .item-2 .description_food p {
+    font-size: 0.9em;
+    padding-bottom: 5px;
+  }
+  .item-2 .heart_animation {
+    font-size: 1.4em;
+    position: absolute;
+    right: 19px;
+    bottom: 22px;
   }
 }
 /*# sourceMappingURL=main.css.map */
