--- a/css/main.scss
+++ b/css/main.scss
@@ -93,9 +93,9 @@ $FRoboto : 'Roboto', sans-serif;
             left:39px;
         }
         
+        
+        
     }
-
-
 
     .description h1
     {
@@ -125,16 +125,22 @@ $FRoboto : 'Roboto', sans-serif;
         grid-area:b;
         padding:0.9em 1.5em;
         border-radius: 30px;
-        background-image:linear-gradient(to bottom right,#E370DA,#D66CDA,#AD5EDB);
+        background-image:linear-gradient(to bottom right,$secondary_color,#D66CDA,#AD5EDB);
         margin-top:10px;
-        box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         position: relative;
         right:6px;
-    }
-
-    .button a
-    {
-        color:white;
+        cursor: pointer;
+        
+            & a
+            {
+                color:white;
+            }
+            
+            &:hover{
+                opacity: 0.9;
+                box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
+                transition:900ms;
+            }
     }
     
     /* END OF SECTION -2 */
@@ -145,23 +151,27 @@ $FRoboto : 'Roboto', sans-serif;
        
         margin-top:2em;
         font-family: $FRoboto;
+        padding-bottom:2em;
 
     }
-        .functioning{
+        .functioning
+    {
 
         display: flex;
         flex-direction: column;
         align-items: center;
         position: relative;
         right:70px;
-            & h1{
-                
-                font-size: 1.3em;
-                margin-bottom: 1.1em;
-                margin-right: 48px;
-                
-            }
-        }
+
+                & h1
+                {
+                    
+                    font-size: 1.3em;
+                    margin-bottom: 1.1em;
+                    margin-right: 48px;
+                    
+                }
+    }
    
     .item {
         display: flex;
@@ -218,6 +228,7 @@ $FRoboto : 'Roboto', sans-serif;
     /* SECTION -4 */
     .section-4 {
         background:#F0F0F0;
+        padding-bottom: 3em;
     }
     
     .food_cards
@@ -290,6 +301,7 @@ $FRoboto : 'Roboto', sans-serif;
                 position:absolute;
                 right:19px;
                 bottom:27px;
+                
             }
 
             &:visited
@@ -355,27 +367,32 @@ $FRoboto : 'Roboto', sans-serif;
         margin-left:48px;
     }
 
-    .food_cards{
-        position: relative;
-        right:0;
+    .food_cards
+    {
+     position: relative;
+     right:0;
     
     
-    & h2 {
-        font-size: 0.9em;
-    }
+        & h2
+        {
+            font-size: 0.9em;
+        }
 
-    & h1 {
-        position: relative;
-        right:90px;
+        & h1
+        {
+            position: relative;
+            right:90px;
+        }
     }
-}
 
     .item-2
     {
         position: relative;
         /* Temporary size */
         width: 300px;
-            & .new_food{
+
+            & .new_food
+            {
                 position: absolute;
                 right: 15px;
                 top:15px;
@@ -386,17 +403,21 @@ $FRoboto : 'Roboto', sans-serif;
                 font-size: 0.8em;
             }
 
-            & .description_food{
+            & .description_food
+            {
                 padding:10px 0px 5px 10px;
                 line-height: 20px;
 
-                    & p {
+                    & p
+                    {
                         font-size: 0.9em;
                         padding-bottom:5px;
                     }
+
             }
 
-            & .heart_animation {
+            & .heart_animation
+            {
                 font-size: 1.4em;
                 position:absolute;
                 right:19px;
